<resources>
    <string name="debug_app_shortcut">BC Debug Opts</string>
    <string name="debug_app_shortcut_short">BC Opts</string>
    <string name="common_replaceable_value">%1$s</string>
    <string name="common_hyphenated_strings">%1$s - %2$s</string>
    <string name="common_newlined_strings">%1$s\n%2$s</string>
    <string name="common_spaced_strings">%1$s&#160;%2$s</string>
    <string name="common_send">Send</string>
    <string name="common_receive">Receive</string>
    <string name="common_swap">Swap</string>
    <string name="common_withdraw">Withdraw</string>
    <string name="common_activity">Activity</string>
    <string name="common_summary">Summary</string>
    <string name="common_from">From</string>
    <string name="common_to">To</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_total">Total</string>
    <string name="common_deposit">Deposit</string>
    <string name="common_transfer">Transfer</string>
    <string name="common_error">Something went wrong, please try again</string>
    <string name="common_company_name">Blockchain.com</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_linked_learn_more"><annotation link="learn_more_link">Learn more.</annotation></string>
    <string name="common_empty_title">Can’t load your Wallets</string>
    <string name="common_empty_details">Looks like there is an issue with your internet connection. Please check and try again</string>
    <string name="common_empty_cta">Tap to refresh</string>
    <string name="common_pending">Pending</string>
    <string name="common_free">Free</string>
    <string name="common_zero">0</string>
    <string name="common_retry">Retry</string>
    <string name="common_continue">Continue</string>
    <string name="common_try_again">Try Again</string>
    <string name="common_oops">Oops! Something went wrong.</string>
    <string name="common_sell">Sell</string>
    <string name="common_buy">Buy</string>
    <string name="common_search">Search</string>
    <string name="common_approve">Approve</string>
    <string name="common_deny">Deny</string>
    <string name="common_payment">Payment</string>
    <string name="common_unknown">Unknown</string>
    <string name="common_wallets">Wallets</string>
    <plurals name="transfer_label_plural">
        <item quantity="one">1 imported address</item>
        <item quantity="other">%d imported addresses</item>
    </plurals>
    <string name="upgrade_wallet">Upgrade</string>
    <string name="backup_wallet_title">Secret Private Key Recovery</string>
    <string name="action_settings">Settings</string>
    <string name="please_wait">Please wait</string>
    <string name="item_backup">Backup funds</string>
    <string name="item_the_exchange">Exchange</string>
    <string name="item_airdrops">Airdrops</string>
    <string name="item_debug_homebrew" translatable="false">Debug Homebrew</string>
    <string name="toolbar_cmd_home">Home</string>
    <string name="toolbar_cmd_activity">Activity</string>
    <string name="toolbar_cmd_swap">Swap</string>
    <string name="toolbar_cmd_transfer">Transfer</string>
    <string name="polite_no">No thanks</string>
    <string name="done">Done</string>
    <string name="btn_close">Close</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="options_id">Wallet ID</string>
    <string name="preferences_about_title">About Us</string>
    <string name="preferences_rate_app">Rate the App</string>
    <string name="logout_wallet">Log Out</string>
    <string name="ask_you_sure_logout">Are you sure you want to log out from this wallet?</string>
    <string name="btn_logout">Logout</string>
    <string name="select_currency">Select Currency</string>
    <string name="options_currency">Local Currency</string>
    <string name="options_tos">Terms of Service</string>
    <string name="options_privacy">Privacy Policy</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_mobile">Invalid mobile phone number</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_password_too_short">Please enter more than 3 characters</string>
    <string name="invalid_guid">Invalid Wallet ID</string>
    <string name="password_mismatch_error">Passwords do not match</string>
    <string name="change_password_new_matches_current">You can’t use your current password as your
        new password
    </string>
    <string name="no_private_key">Cannot produce private key.</string>
    <string name="pin_max_strikes">%1$d failed PIN attempts. Please provide password.</string>
    <string name="pin_4_strikes_password_accepted">Password accepted. Please define new PIN.
    </string>
    <string name="bip38_password_entry">Please enter private key password</string>
    <string name="pin_entry">Enter PIN</string>
    <string name="password_entry">Please enter password</string>
    <string name="zero_pin">0000 is an invalid PIN. Please try again.</string>
    <string name="invalid_pin">Invalid PIN. Please try again.</string>
    <string name="pin_mismatch_error">PINs do not match</string>
    <string name="create_pin">Create PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="create_pin_failed">PIN creation failed. Please pair device again.</string>
    <string name="change_pin_new_matches_current">You can’t use your current PIN as your new PIN
    </string>
    <string name="pairing_failed">Pairing failed. Please try again.</string>
    <string name="account_locked_title">Account locked</string>
    <string name="account_locked_message">Your account has been locked temporarily as a precaution.
        Please check your email for more information and try again later.
    </string>
    <string name="keyboard_input_delete">Keyboard Input Delete</string>
    <string name="check_connectivity_exit">Blockchain Wallet cannot obtain an Internet connection.
        Please check the connectivity on your device and try again.
    </string>
    <string name="server_unreachable_exit">Unable to connect to server, please try again later.</string>
    <string name="double_encryption_password_error">Double encrypt password error. Please try again.</string>
    <string name="btn_scan_pairing_code">Scan Pairing Code</string>
    <string name="btn_manual_pairing">Manual Pairing</string>
    <string name="create_a_wallet">Create an Account</string>
    <string name="log_in">Login</string>
    <string name="login_auto_pair_title">Automatic Pairing</string>
    <string name="manual_pairing">Manual Pairing</string>
    <string name="pair_wallet_step_1">Log in to your Blockchain Wallet via your PC or Mac at %1$s.</string>
    <string name="pair_wallet_step_2">Go to Settings / General.</string>
    <string name="landing_title">Welcome to Blockchain</string>
    <string name="landing_body">The easy way to <b>send</b>, <b>receive</b>, <b>store</b> and <b>trade</b> digital currencies.</string>
    <string name="landing_create_wallet">Create a Wallet</string>
    <string name="landing_log_in">Log in</string>
    <string name="landing_version">v%1$s (%2$d) %3$s</string>
    <string name="pair_wallet_step_3">Click Show Pairing Code to reveal a QR Code, a square black
        &amp; white barcode. Scan the code with your camera.
    </string>
    <string name="wallet_id">Wallet ID</string>
    <string name="recover_funds">Recover Funds</string>
    <string name="recover_funds_warning_message_1">You should always pair or login if you have access
        to your Wallet ID and password. Recovering your funds may create a new Wallet ID. Would you
        like to continue?
    </string>
    <string name="recover_funds_instructions">Enter your 12 backup words with spaces to recover your
        funds &amp; transactions
    </string>
    <string name="recovery_passphrase_1">Secret Private Key Recovery Phrase</string>
    <string name="invalid_recovery_phrase_1">Invalid Secret Private Key Recovery Phrase. Please try again</string>
    <string name="creating_wallet">Creating wallet</string>
    <string name="restore_failed">Restoring wallet failed. Please try again</string>
    <string name="restoring_wallet">Restoring wallet.</string>
    <string name="password">Password</string>
    <string name="email">Your Email</string>
    <string name="password_disclaimer">I understand that Blockchain.com cannot recover my password for me. If I lose access to my Wallet, I must use my <annotation link="backup">Secret Phrase</annotation> to access my funds.</string>
    <string name="support">Support</string>
    <string name="drawer_addresses">Addresses</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="backup_subtitle">Secret Private Key Recovery Phrase</string>
    <string name="backup_instructions_1">In crypto, when you hold the private keys, you\'re in control of the funds in your Private Key Wallet. The downside is that WHOEVER holds your private keys can control your Private Key Wallet.</string>
    <string name="backup_instructions_2">So you must:</string>
    <string name="backup_instructions_3">1. Write down the 12 word phrase on the next screen in the exact order it appears</string>
    <string name="backup_instructions_4">2. Keep it safe, ideally on a securely stored piece of paper (in other words, not a digital copy).</string>
    <string name="backup_instructions_5">3. NEVER share your backup phrase with anyone.</string>
    <string name="backup_instructions_warn">Warning: If someone has your backup phrase they will have access to your Private Key Wallet and can withdraw funds.</string>
    <string name="backup_instructions_alert">Blockchain.com will never ask to view or receive your recovery phrase.</string>
    <string name="backup_button_begin">View Recovery Phrase</string>
    <string name="fingerprint_login_title">Biometric login</string>
    <string name="onboarding_fingerprint_title_1">Biometric Login</string>
    <string name="onboarding_fingerprint_summary_1">Use biometric login instead of your PIN to
        authenticate and access your wallet.
    </string>
    <string name="onboarding_fingerprint_enable_1">Enable biometrics</string>
    <string name="contact_support">Contact Support</string>
    <string name="transfer_wallets_empty_title">No crypto to send</string>
    <string name="transfer_wallets_empty_details">Looks like your wallets are empty, we can help you buy crypto</string>
    <string name="transfer_wallet_buy_crypto">Buy Crypto</string>
    <string name="transfer_send_crypto_title">Send Crypto</string>
    <string name="transfer_send_crypto_label">Select the Wallet you want to send from.</string>
    <string name="earn_interest">Earn Interest</string>
    <string name="swap_cta">New Swap</string>
    <string name="swap_low_fees">Low Fees</string>
    <string name="swap_faster">Faster</string>
    <string name="swap_trading_sheet_title">Faster. Cheaper. Better\nSwap Crypto with your Trading Wallet.</string>
    <string name="swap_trading_sheet_subtitle">Get lower fees and double the transaction speed when you Swap your crypto from any Trading Wallet.</string>
    <string name="swap_trading_fees_title">Same Swap, Lower Fees</string>
    <string name="swap_trading_fees_subtitle">You pay zero network fees by swapping crypto off-chain</string>
    <string name="swap_trading_speed_title">Swap in Seconds</string>
    <string name="swap_trading_speed_subtitle">Increased speed means your Swap trade clears in seconds, not minutes</string>
</resources>