<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/nav_menu_top">

        <item
            android:id="@+id/nav_interest"
            android:icon="@drawable/ic_interest_grey_circle"
            android:title="@string/earn_interest"
            android:visible="true" />

        <item
            android:id="@+id/nav_addresses"
            android:icon="@drawable/ic_nav_wallet"
            android:title="@string/drawer_addresses"
            app:contentDescription="@string/drawer_addresses" />

        <item
            android:id="@+id/nav_the_exchange"
            android:icon="@drawable/ic_nav_the_exchange"
            android:title="@string/item_the_exchange"
            app:contentDescription="@string/item_the_exchange" />

        <item
            android:id="@+id/nav_airdrops"
            android:icon="@drawable/ic_nav_airdrops"
            android:title="@string/item_airdrops"
            app:contentDescription="@string/item_airdrops" />

        <item
            android:id="@+id/nav_lockbox"
            android:icon="@drawable/ic_nav_hardware"
            android:title="@string/item_lockbox"
            android:visible="false"
            app:contentDescription="@string/item_lockbox" />

    </group>

    <group android:id="@+id/nav_menu_bottom">
        <item
            android:id="@+id/login_web_wallet"
            android:icon="@drawable/ic_nav_web_login"
            android:title="@string/pairing_code_log_in"
            app:contentDescription="@string/pairing_code_log_in" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/action_settings"
            app:contentDescription="@string/action_settings" />

        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_nav_support"
            android:title="@string/support"
            app:contentDescription="@string/support" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_nav_logout"
            android:title="@string/logout"
            app:contentDescription="@string/logout" />

        <item
            android:id="@+id/nav_debug_swap"
            android:icon="@drawable/ic_nav_debug_swap"
            android:title="@string/item_debug_homebrew"
            android:visible="false" />

    </group>
</menu>
