<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/button_start"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/standard_margin"
            android:paddingEnd="@dimen/standard_margin"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/backup_header"
                style="@style/Text.Semibold.20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@string/backup_subtitle" />

            <TextView
                android:id="@+id/backup_instruction_1"
                style="@style/Text.Standard.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:lineSpacingExtra="4sp"
                android:text="@string/backup_instructions_1" />

            <TextView
                android:id="@+id/backup_instruction_2"
                style="@style/Text.Standard.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:lineSpacingExtra="5sp"
                android:text="@string/backup_instructions_2" />

            <TextView
                android:id="@+id/backup_instruction_3"
                style="@style/Text.Standard.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5sp"
                android:text="@string/backup_instructions_3" />

            <TextView
                android:id="@+id/backup_instruction_4"
                style="@style/Text.Standard.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5sp"
                android:text="@string/backup_instructions_4" />

            <TextView
                android:id="@+id/backup_instruction_5"
                style="@style/Text.Standard.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5sp"
                android:text="@string/backup_instructions_5" />

            <TextView
                android:id="@+id/backup_instruction_warn"
                style="@style/Text.Bold.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:lineSpacingExtra="4sp"
                android:text="@string/backup_instructions_warn" />

            <TextView
                android:id="@+id/backup_instruction_alert"
                style="@style/Text.Bold.14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:drawablePadding="@dimen/small_margin"
                android:lineSpacingExtra="4sp"
                android:text="@string/backup_instructions_alert"
                android:textColor="@color/red_400"
                app:drawableStartCompat="@drawable/ic_user_alert" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_start"
        style="@style/CtaButton.Blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_margin"
        android:contentDescription="@string/backup_button_begin"
        android:text="@string/backup_button_begin"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>