<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/standard_margin"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/swap_trading_sheet_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vector_sheet_indicator_small" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/swap_trading_title"
        style="@style/Text.Semibold.20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@string/swap_trading_sheet_title"
        app:layout_constraintTop_toBottomOf="@id/swap_trading_sheet_indicator" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/swap_trading_subtitle"
        style="@style/Text.Light.14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/very_small_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@string/swap_trading_sheet_subtitle"
        app:layout_constraintTop_toBottomOf="@id/swap_trading_title" />

    <View
        android:id="@+id/swap_trading_header_separator"
        style="@style/SeparatorWithoutMargins"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/standard_margin"
        app:layout_constraintTop_toBottomOf="@id/swap_trading_subtitle" />

    <piuk.blockchain.android.ui.customviews.StatusPill
        android:id="@+id/swap_trading_fees_badge"
        app:status_type="upsell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/swap_low_fees"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swap_trading_header_separator" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/swap_trading_fees_title"
        style="@style/Text.Semibold.16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@string/swap_trading_fees_title"
        app:layout_constraintTop_toBottomOf="@id/swap_trading_fees_badge" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/swap_trading_fees_subtitle"
        style="@style/Text.Light.14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/minuscule_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@string/swap_trading_fees_subtitle"
        app:layout_constraintTop_toBottomOf="@id/swap_trading_fees_title" />

    <View
        android:id="@+id/swap_trading_benefits_separator"
        style="@style/SeparatorWithoutMargins"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/standard_margin"
        app:layout_constraintTop_toBottomOf="@id/swap_trading_fees_subtitle" />

    <piuk.blockchain.android.ui.customviews.StatusPill
        android:id="@+id/swap_trading_fast_badge"
        app:status_type="upsell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/standard_margin"
        android:text="@string/swap_faster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swap_trading_benefits_separator" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/swap_trading_speed_title"
        style="@style/Text.Semibold.16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/tiny_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@string/swap_trading_speed_title"
        app:layout_constraintTop_toBottomOf="@id/swap_trading_fast_badge" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/swap_trading_speed_subtitle"
        style="@style/Text.Light.14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginTop="@dimen/minuscule_margin"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@string/swap_trading_speed_subtitle"
        app:layout_constraintTop_toBottomOf="@id/swap_trading_speed_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/swap_trading_cta"
        style="@style/CtaButton.Blue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/swap_cta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swap_trading_speed_subtitle" />

</androidx.constraintlayout.widget.ConstraintLayout>