<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transfer.AccountSelectorFragment"
    android:background="@color/white">

    <piuk.blockchain.android.ui.customviews.IntroHeaderView
        android:id="@+id/account_selector_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:intro_header_icon="@drawable/ic_send_blue_circle"
        app:intro_header_label="@string/transfer_send_crypto_label"
        app:intro_header_title="@string/transfer_send_crypto_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <piuk.blockchain.android.ui.customviews.account.AccountList
        android:id="@+id/account_selector_account_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_selector_header" />

    <LinearLayout
        android:id="@+id/account_selector_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/standard_margin"
        android:paddingBottom="@dimen/standard_margin"
        android:visibility="gone"
        tools:visibility="gone">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text.Semibold.Centered.20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transfer_wallets_empty_title" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text.Standard.Centered.14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiny_margin"
            android:text="@string/transfer_wallets_empty_details" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_wallet_intro_image" />

        <Button
            android:id="@+id/account_selector_button_buy_crypto"
            style="@style/CtaButton.Blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/transfer_wallet_buy_crypto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_selector_account_list" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
