<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/PasswordChangeDialogEditTextLayout"
        android:layout_marginTop="24dp">

        <TextView
            style="@style/PasswordChangeDialogFieldLabel"
            android:text="@string/current_password" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/current_password"
            style="@style/PasswordChangeDialogEditText">

            <requestFocus />
        </androidx.appcompat.widget.AppCompatEditText>
    </LinearLayout>

    <LinearLayout style="@style/PasswordChangeDialogEditTextLayout">

        <TextView
            style="@style/PasswordChangeDialogFieldLabel"
            android:text="@string/new_password" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/new_password"
            style="@style/PasswordChangeDialogEditText" />
    </LinearLayout>

    <piuk.blockchain.android.ui.customviews.PasswordStrengthView
        android:id="@+id/password_strength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:visibility="visible" />

    <LinearLayout style="@style/PasswordChangeDialogEditTextLayout">

        <TextView
            style="@style/PasswordChangeDialogFieldLabel"
            android:text="@string/confirm_password" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/confirm_password"
            style="@style/PasswordChangeDialogEditText" />
    </LinearLayout>
</LinearLayout>